--- a/style.css
+++ b/style.css
@@ -54,6 +54,25 @@
   }
 }
 
+@keyframes circleSquare {
+  0% {
+    border-radius: 50%;
+  }
+  25% {
+    border-radius: 25%;
+  }
+  50% {
+    border-radius: 0%;
+  }
+  75% {
+    border-radius: 25%;
+  }
+  100% {
+    border-radius: 50%;
+  }
+}
+
+
 h1 {
   width: 100px;
   height: 100px;
@@ -102,4 +121,14 @@ h4 {
 div {
   text-align: center;
   overflow: hidden;
+}
+
+.ball {
+  position: relative;
+  border-radius: 50%;
+  height: 250px;
+  width:250px;
+  background-color: lightBlue;
+  animation: circleSquare 5s;
+  animation-iteration-count: infinite;
 }
